FINISHED :D super basic horrible note taking app is done. now to make it fun!!

--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name"         : "node-todo",
-  "version"      : "0.0.0",
-  "description"  : "Simple todo application.",
-  "main"         : "server.js",
-  "author"       : "Benjiiiiii",
-  "dependencies" : {
-    "express"    : "~4.7.2",
-    "mongoose"   : "~3.6.2",
-    "morgan"     : "~1.2.2",
+  "name": "node-todo",
+  "version": "0.0.0",
+  "description": "Simple todo application.",
+  "main": "server.js",
+  "author": "Benjiiiiii",
+  "dependencies": {
+    "angular-route": "^1.6.4",
     "body-parser": "~1.5.2",
-    "method-override": "~2.1.2"
-    }
+    "express": "~4.7.2",
+    "jquery": "^3.2.1",
+    "kerberos": "0.0.23",
+    "method-override": "~2.1.2",
+    "mongoose": "^3.6.20",
+    "morgan": "~1.2.2"
+  }
 }
